@@ -38,9 +38,10 @@ import xyz.zedler.patrick.grocy.Constants.PREF;
 import xyz.zedler.patrick.grocy.R;
 import xyz.zedler.patrick.grocy.api.GrocyApi;
 import xyz.zedler.patrick.grocy.helper.DownloadHelper;
+import xyz.zedler.patrick.grocy.model.FilterChipLiveData;
 import xyz.zedler.patrick.grocy.model.FilterChipLiveDataFields;
 import xyz.zedler.patrick.grocy.model.FilterChipLiveDataFields.Field;
-import xyz.zedler.patrick.grocy.model.FilterChipLiveDataShoppingListGrouping;
+import xyz.zedler.patrick.grocy.model.FilterChipLiveDataShoppingModeGrouping;
 import xyz.zedler.patrick.grocy.model.InfoFullscreen;
 import xyz.zedler.patrick.grocy.model.MissingItem;
 import xyz.zedler.patrick.grocy.model.Product;
@@ -63,12 +64,6 @@ public class ShoppingModeViewModel extends BaseViewModel {
 
   public final static String FIELD_AMOUNT = "field_amount";
   public final static String FIELD_NOTES = "field_notes";
-  public final static String FIELD_DUE_DATE = "field_due_date";
-  public final static String FIELD_VALUE = "field_value";
-  public final static String FIELD_CALORIES_UNIT = "field_calories_unit";
-  public final static String FIELD_CALORIES_TOTAL = "field_calories_total";
-  public final static String FIELD_AVERAGE_PRICE = "field_average_price";
-  public final static String FIELD_LAST_PRICE = "field_last_price";
   public final static String FIELD_PRODUCT_DESCRIPTION = "field_product_description";
   public final static String FIELD_PICTURE = "field_picture";
 
@@ -81,6 +76,7 @@ public class ShoppingModeViewModel extends BaseViewModel {
   private final MutableLiveData<InfoFullscreen> infoFullscreenLive;
   private final MutableLiveData<Integer> selectedShoppingListIdLive;
   private final MutableLiveData<ArrayList<ShoppingListItem>> filteredShoppingListItemsLive;
+  private final FilterChipLiveDataShoppingModeGrouping filterChipLiveDataGrouping;
   private final FilterChipLiveDataFields filterChipLiveDataFields;
 
   private List<ShoppingListItem> shoppingListItems;
@@ -114,6 +110,10 @@ public class ShoppingModeViewModel extends BaseViewModel {
     infoFullscreenLive = new MutableLiveData<>();
     selectedShoppingListIdLive = new MutableLiveData<>(1);
     filteredShoppingListItemsLive = new MutableLiveData<>();
+    filterChipLiveDataGrouping = new FilterChipLiveDataShoppingModeGrouping(
+        getApplication(),
+        this::updateFilteredShoppingListItems
+    );
     filterChipLiveDataFields = new FilterChipLiveDataFields(
         getApplication(),
         PREF.SHOPPING_MODE_FIELDS,
@@ -487,11 +487,6 @@ public class ShoppingModeViewModel extends BaseViewModel {
     return quantityUnitHashMap;
   }
 
-  public String getGroupingMode() {
-    return sharedPrefs.getString(PREF.SHOPPING_LIST_GROUPING_MODE,
-        FilterChipLiveDataShoppingListGrouping.GROUPING_PRODUCT_GROUP);
-  }
-
   @NonNull
   public MutableLiveData<Boolean> getIsLoadingLive() {
     return isLoadingLive;
@@ -500,6 +495,14 @@ public class ShoppingModeViewModel extends BaseViewModel {
   @NonNull
   public MutableLiveData<InfoFullscreen> getInfoFullscreenLive() {
     return infoFullscreenLive;
+  }
+
+  public FilterChipLiveData getFilterChipLiveDataGrouping() {
+    return filterChipLiveDataGrouping;
+  }
+
+  public String getGroupingMode() {
+    return filterChipLiveDataGrouping.getGroupingMode();
   }
 
   public FilterChipLiveDataFields getFilterChipLiveDataFields() {
