@@ -13,6 +13,7 @@
 - Improved: "Create recipe" page and "Create product" page now use "save and not close" buttons
 - Improved: Description editor page now has bottom padding (still needs improvements with keyboard)
 - Improved: Language picker works more reliably with demo domain change
+- Improved: Shopping mode grouping option now can be set separately from shopping list page
 - Fixed: Crash on startup with Android Lollipop (and maybe higher)
 - Fixed: Prevent crash when opening qu conversion page (#708)
 - Fixed: Glitch with large top margin on recipe grid layout (#696)
